# slopsmith-desktop

./: .build-config.json  .gitignore  .gitmodules  .pre-commit-config.yaml  .venv  CLAUDE.md  CMakeLists.txt  README.md  THIRD_PARTY_LICENSES.md  WINDOWS_BUILD_REQUIREMENTS.md  _typos.toml  load-gr6.js  package.json
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/: CONTRIBUTING.md  FUNDING.yml
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml  FEATURE-REQUEST.yml
.github/workflows/: branch-windows.yml  build.yml
.packages/: README.md  apt.txt  brew.txt  choco.txt  python.txt
cmake/: onnxruntime.cmake
docs/: BUILD_ARCHITECTURE.md  SANDBOX-DESIGN.md  VST-SANDBOX-DIAG.md  audio-engine-architecture.md
resources/models/: README.md
resources/soundfonts/: LICENSE
scripts/: BUILD_SCRIPTS.md  VST_TRACE_README.md  build-audio.sh  build-common.sh  build-linux-docker.sh  build-linux-release.sh  build-linux-ubuntu.sh  build-macos.sh  build-release.sh  build-rscli.sh  build-windows.sh  bundle-binaries.sh  bundle-plugin-deps.sh  bundle-python.sh  bundle-slopsmith.sh  bundle-soundfont.sh  bundle.sh  bundled-lib-skiplist.sh  parse-build-config.py  setup-dev.sh  sign-macos-binaries.sh
scripts/dev/: load-gr6.js
src/audio/: AudioEngine.cpp  AudioEngine.h  AudioSanitize.h  BackingSlowdownStretch.cpp  BackingSlowdownStretch.h  BackingTimeStretch.h  CMakeLists.txt  ChordScorer.cpp  ChordScorer.h  MlNoteDetector.cpp  MlNoteDetector.h  NodeAddon.cpp  NoiseGate.cpp  NoiseGate.h  NoteVerifier.cpp  NoteVerifier.h  OnsetDetector.cpp  OnsetDetector.h  PitchDetector.cpp  PitchDetector.h  SignalChain.cpp  SignalChain.h  TonePolish.cpp  TonePolish.h  VSTHost.cpp  VSTHost.h  VSTTrace.h
src/audio/Sandbox/: AudioChannel.cpp  AudioChannel.h  ControlChannel.cpp  ControlChannel.h  Protocol.cpp  Protocol.h  SandboxFactory_stub.cpp  SandboxFactory_win.cpp  SandboxedProcessor.cpp  SandboxedProcessor.h  SubprocessHandle.cpp  SubprocessHandle.h
src/main/: audio-bridge.ts  debug-log.ts  ipc-channels.ts  main.ts  nsis-migration.ts  preload.ts  python.ts  soundfont-manager.ts  spinner.json  splash-preload.ts  splash.html  update-manager.ts  vst-crash-guard.ts
src/renderer/: plugin.json  screen.html  screen.js  settings.html
src/renderer/plugin-manager/: plugin.json
src/vst-host/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  ml-note-detection.test.js
tests/audio_sanitize/: CMakeLists.txt  test.cpp
tests/mlnotedetector/: CMakeLists.txt  bench.cpp  test.cpp
tests/sandbox/: CMakeLists.txt  audio_channel_midi_test.cpp
tests/spike/: CMakeLists.txt  README.md  main.cpp
